bk_ida/gccida/g1/dump_regset
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_regset/src/flow.c:4619:16: error: use of undeclared identifier 'off_6376D2'
fprintf( outf, off_6376D2, ( unsigned int)v5); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_regset/src/flow.c:4632:19: error: use of undeclared identifier 'to'
fwrite( ( char *)&to.current + 5, 1uLL, 6uLL, outf); 
                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_regset/src/obj/flow.o] Error 1
